Small border fix

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1415,6 +1415,8 @@ body.Discussion a.Bookmark {
 
 .Empty {
 	background: @whiterSmoke;
+	border: 1px solid @tableBorder;
+	border-top: none;
 	margin: 0;
 	padding: 10px 15px;
 	.border-radius(0 0 4px 4px);
