Another small border fix

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1026,7 +1026,8 @@ div.Options {
 	&.Discussions,
 	&.Drafts,
 	&.Activities,
-	&.Conversations {
+	&.Conversations,
+	&.SearchResults {
 		border: 1px solid @tableBorder;
 		border-top: none;
 		}
@@ -1034,7 +1035,8 @@ div.Options {
 	&.Discussions,
 	&.Drafts,
 	&.Activities,
-	&.Conversations {
+	&.Conversations,
+	&.SearchResults {
 		.border-radius(0 0 4px 4px);
 		}
 	
