--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1053,6 +1053,12 @@ div.Options {
 			.CommentInfo {
 				margin: 4px 0 0;
 				}
+			.Message {
+				margin: 9px 9px 9px 0;
+				}
+			.Meta {
+				padding: 4px 0;
+				}
 			}
 		.Options {
 			margin: 2px 6px 0 0;
