Small style fixes

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1071,6 +1071,14 @@ div.Options {
 			}
 		}
 	
+	&.ActivityComments {
+		.CommentForm {
+			border: solid @tableBorder;
+			border-width: 1px 0 0;
+			background: @whiteSmoke;
+			}
+		}
+	
 	&.Discussions {
 		.Item {
 			background: white;
