--- a/design/style.css
+++ b/design/style.css
@@ -153,8 +153,7 @@ a.Button {
 	text-decoration: line-through;
 }
 .Deleted {
-	background: #f5f5f5;
-	border: 1px solid #dddddd;
+	border: 1px solid;
 	margin: 10px 0 0;
 	padding: 6px 10px;
 	border-radius: 3px;
@@ -164,34 +163,25 @@ a.Button {
 /* Note: Warning, Alert & Info are simple boxes that can be used to wrap message
 	strings & imply importance. */
 .Warning {
-	background: #ffc;
-	border: 1px solid #ff9;
-	color: #000;
+	border: 1px solid;
 	padding: 6px 8px;
 	border-radius: 3px;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 }
 .Alert {
-	background: #d00;
-	color: #fff;
 	padding: 1px 4px;
 	border-radius: 2px;
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
 }
-.Alert a {
-	color: #fff;
-}
 .Alert a:hover {
 	text-decoration: underline;
 }
 .Info {
 	font-size: 13px;
-	background: #fafafa;
-	border: 1px solid #eee;
-	color: #888;
+	border: 1px solid;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
@@ -217,7 +207,6 @@ a.Button {
 	background: url('images/progress.gif') center center no-repeat !important;
 }
 .NumberedPager, .PrevNextPager {
-	margin: 1px 0 0;
 	text-align: right;
 	font-weight: bold;
 	font-size: 16px;
@@ -225,10 +214,6 @@ a.Button {
 .NumberedPager a,
 .NumberedPager span {
 	padding: 0 4px;
-}
-.NumberedPager span,
-.NumberedPager a.Highlight {
-	color: #777;
 }
 .NumberedPager a.Next,
 .NumberedPager span.Next {
@@ -245,7 +230,6 @@ a.Small:hover {
 a.Small img {
 	background: none;
 	text-indent: -100px;
-	background: #ddd;
 	display: inline-block;
 	height: 24px;
 	width: 24px;
@@ -264,7 +248,6 @@ a.Small img {
 
 /* =================================================================== Header */
 #Head {
-	background: #38abe3;
 	padding: 0;
 }
 .Search:after,
@@ -284,7 +267,6 @@ body #Head h1 {
 }
 #Head h1 a span {
 	font-size: 24px;
-	color:#fff;
 }
 #Head .Search,
 #Head #Search {
@@ -303,11 +285,9 @@ body #Head h1 {
 	border: 0;
 	padding: 4px;
 	margin: 0 6px 0 0;
-	background: #fff;
 	-moz-border-radius: 2px;
 	-webkit-border: 2px;
 	border-bottom: 2px;
-	color: #969696;
 	font-size: 13px;
 	vertical-align: bottom;
 }
@@ -359,14 +339,7 @@ body #Head h1 {
 #Menu li.NonTab a {
 	font-weight: normal;
 }
-#Menu ul {
-	background: #38abe3;
-}
-#Menu a {
-	color: #fff;
-}
 #Menu a:hover {
-	color: #fff;
 	text-decoration: underline;
 }
 #Menu a span,
@@ -380,8 +353,6 @@ body #Head h1 {
 	line-height: 12px;
 	font-weight: normal;
 	text-shadow: none;
-	background: #f2fcff;
-	color: #299fc7;
 }
 
 /* Option (dropdown) Menus */
@@ -405,12 +376,8 @@ body #Head h1 {
 	-o-user-select: none;
 }
 .MenuItems a, .MenuItems a:link, .MenuItems a:visited, .MenuItems a:active {
-	color: #fff;
 	display: block;
 	text-decoration: none;
-}
-.MenuItems li:hover {
-	background: #282828;
 }
 .ToggleFlyout {
 	cursor: pointer;
@@ -437,17 +404,11 @@ body #Head h1 {
 	border-radius: 1px;
 	-moz-border-radius: 1px;
 	-webkit-border-radius: 1px;
-	background: #cfecff;
-	color: #888;
 	padding: 6px 10px;
-	margin: 0 0 10px;
-	box-shadow: 0px 0px 2px #999;
-	-moz-box-shadow: 0px 0px 2px #999;
-	-webkit-box-shadow: 0px 0px 2px #999;  
+	margin: 0 0 10px; 
 }
 .Box h4 {
 	font-size: 110%;
-	color: #1e79a7;
 	font-weight: bold;
 	margin: 0;
 	padding: 0 0 1px;
@@ -459,7 +420,6 @@ body #Head h1 {
 	font-size: 12px;
 	float: left;
 	width: 80px;
-	color: #555;
 	overflow: hidden;
 	white-space: nowrap;
 }
@@ -470,15 +430,13 @@ body #Head h1 {
 .Box p {
 	font-size: 100%;
 	padding: 0 0 4px;
-	color: #555;
 }
 .PanelActivity {
-	border-top: 1px solid #abdafb;
+	border-top: 1px solid;
 	border-bottom: 0;
 }
 .PanelActivity li {
-	background: #e3f4ff;
-	border-bottom: 1px solid #abdafb;
+	border-bottom: 1px solid;
 	padding: 2px 4px;
 	color: #555;
 	font-size: 11px;
@@ -500,25 +458,22 @@ body #Head h1 {
 }
 .PanelActivity li em {
 	padding-left: 5px;
-	color: #777;
 	font-size: 80%;
 }
 .PanelActivity li .Story {
 	font-size: 85%;
 }
 .PanelInfo li {
-	background: #e3f4ff;
-	border-bottom: 1px solid #abdafb;
+	border-bottom: 1px solid;
 	padding: 2px 4px;
 	text-align: right;
 }
 .PanelInfo li.Heading {
 	text-align: left;
-	color: #000;
 	font-weight: bold;
 }
 .PanelInfo {
-	border-top: 1px solid #abdafb;
+	border-top: 1px solid;
 	border-bottom: 0;
 }
 .PanelInfo li strong {
@@ -647,8 +602,6 @@ a.BigButton {
 	height: 44px;
 	width: 44px;
 	overflow: hidden;
-	background: #c4cde0;
-	color: #c4cde0;
 	text-indent: 50px;
 }
 
@@ -662,7 +615,7 @@ a.BigButton {
 	padding: 4px 0;
 	border: 0;
 	position: relative;
-	border-bottom: 1px solid #bec8cc;
+	border-bottom: 1px solid;
 }
 .DataList .Item .Item {
 	border-bottom: none;
@@ -695,14 +648,12 @@ a.BigButton {
 }
 .DataList .Meta {
 	font-size: 11px;
-	color: #70727c;
 }
 .DataList .Excerpt {
 	font-size: 12px;
 	line-height: 1.4;
 }
 .DataList .Excerpt a {
-	color: #333;
 	display: block;
 }
 .DataList .Excerpt p {
@@ -793,21 +744,9 @@ body.Activity h1 {
 .Activities .Title a {
 	font-size: 14px;
 }
-.Activities .Excerpt {
-	color: #80828C;
-}
 .Activities li.Condensed .Excerpt {
-	color: #000;
 	font-size: 13px;
 	/* padding: 0 0 0 4px; */
-}
-.Activities .Excerpt a,
-.Activities .Meta a {
-	color: #1e79a7;
-}
-.Activities .Excerpt a:hover,
-.Activities .Meta a:hover {
-	color: #ff0084;
 }
 .Activities .Excerpt img {
 	padding: 2px;
@@ -980,10 +919,8 @@ pre {
 .Message h3,
 .Message h4,
 .Message h5 {
-	font-family: 'lucida grande','Lucida Sans Unicode', tahoma, sans-serif;
 	font-weight: bold;
 	border: none;
-	color: #000;
 }
 .Message h1 { font-size: 22px; }
 .Message h2 { font-size: 20px; }
@@ -1483,7 +1420,6 @@ div.Popup form p {
 body.Profile #Form_Invitation ul li label,
 body.Profile #Form_User ul li label,
 div.Popup form ul li label {
-	color:#000;
 	display:block;
 	font-weight:bold;
 }
