Small bug fixes and additions
Re-enables profile page photos and correctly styles the warning boxes

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1390,8 +1390,7 @@ div.Box.Group {
 	}
 
 body.Profile .Panel > .Photo {
-	display: none;
-	margin: 10px 0;
+	margin: 0 0 10px;
 	.box-sizing(border-box);
 	img {
 		width: 100%;
@@ -1505,7 +1504,7 @@ body.Discussion a.Bookmark {
 		}
 	}
 
-// Errors
+// Errors and alerts
 // -------------------------------------------------//
 
 .Empty {
@@ -1529,6 +1528,10 @@ body.Discussion a.Bookmark {
 			display: inline;
 			}
 		}
+	}
+
+.Warning {
+	.alert();
 	}
 
 // Labels
