Now working on a version for the 2.1 branch of Vanilla

--- a/design/less/custom.less
+++ b/design/less/custom.less
@@ -1,9 +1,6 @@
-/*--------------------------------------------------*/
-/* NB: This file will have to be updated manually
-/* if you wish to keep your custom styles
-/*--------------------------------------------------*/
+/*----------------------------------------------------------------------------------------------------*/
+/* NB: Make sure not to override this file when you update the theme
+/*----------------------------------------------------------------------------------------------------*/
 
-/*--------------------------------------------------*/
-/* Insert your custom LESS here */
-/*--------------------------------------------------*/
-
+// Insert your custom LESS here
+// ---------------------------------------------------------------------------------------------------//
