--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1,10 +1,9 @@
-// Import Bootstrap (Custom Vanilla build), Docs, Prettify and Uniform
+// Import Bootstrap (Custom Vanilla build), Docs and Prettify
 // ---------------------------------------------------------------------------------------------------// Import stylesheets
 
 	@import "bootstrap/bootstrap";				// Bootstrap
 	@import "docs";								// Bootstrap Documentation style
 	@import url("../css/prettify.css");			// Google Code Prettify
-	@import url("../css/uniform.css");			// Uniform jQuery Plugin
 
 // Bootswatches
 // ---------------------------------------------------------------------------------------------------// Bootswatches
@@ -68,6 +67,19 @@
 		color: #333;
 		border: 0;
 		border-bottom: 1px solid @tableBorder;
+		}
+	
+	.btn-active {
+		background-image: none;
+		outline: 0;
+		.box-shadow(~"inset 0 2px 4px rgba(0,0,0,.15), 0 1px 2px rgba(0,0,0,.05)");
+		}
+	
+	.btn-disabled {
+		cursor: default;
+		background-image: none;
+		.opacity(65);
+		.box-shadow(none);
 		}
 
 // Basic HTML Elements
@@ -158,8 +170,25 @@
 
 	#Form_Comment {
 		margin-bottom: 0;
+		.MarkupHelp {
+			line-height: 28px;
+			margin-right: 15px;
+			color: rgba(0,0,0,0.5);
+			}
 		}
+	
+	// Message Form
+	
+	#MessageForm {
+		margin-top: 20px;
+		}
+	
+	// Discussion Form
+	
+	#Form_Discussion {
 
+		}
+	
 	// Activity form
 	
 	form.Activity {
@@ -185,6 +214,11 @@
 		.btn-primary();
 		display: block;
 		margin: 10px 0;
+		
+		&.ClearConversation {
+			.btn-danger();
+			}
+		
 		}
 
 	// Post Comment Buttons
@@ -243,6 +277,8 @@
 
 // Icons
 // ---------------------------------------------------------------------------------------------------// Icons
+
+	
 
 // Breadcrumbs
 // ---------------------------------------------------------------------------------------------------// Breadcrumbs
@@ -309,7 +345,7 @@
 // ---------------------------------------------------------------------------------------------------// Sidebar Navigation
 
 	#Panel {
-
+		
 		.FilterMenu,
 		.PanelInfo {
 			padding: 0 15px;
@@ -330,7 +366,7 @@
 					margin: 0 -15px;
 					padding: 3px 15px;
 					&:hover {
-						background: @grayLighter;
+						background:  lighten(@tableBorder, 6%);
 						}
 					}
 				&.Active > a {
@@ -373,7 +409,6 @@
 // ---------------------------------------------------------------------------------------------------// Content Column
 	
 	.container {
-		overflow-x: hidden;
 		> .row-fluid {
 			margin-top: 2em;
 			}
@@ -402,6 +437,7 @@
 		.Border {
 			.modal();
 			padding: 0;
+			max-width: 500px;
 			margin: -250px 0 0 -250px;
 			}
 		
@@ -475,6 +511,26 @@
 			}
 		}
 
+// Search Page
+// ---------------------------------------------------------------------------------------------------// Search Page
+
+	.SearchForm {
+		background: rgba(0,0,0,0.05);
+		.border-radius(4px);
+		form {
+			margin-bottom: 0;
+			}
+		input.InputBox {
+			margin-right: 0;
+			border-right: none;
+			.border-radius(3px 0 0 3px);
+			}
+		input.Button {
+			.btn-primary();
+			.border-radius(0 3px 3px 0);
+			}
+		}
+
 // Profile Pages
 // ---------------------------------------------------------------------------------------------------// Profile Pages
 	
@@ -497,10 +553,441 @@
 	#Status {
 		margin: 10px 0;
 		}
+	
+	.MeMenu .Alert {
+		z-index: 10;
+		}
 
 // Login Pages
 // ---------------------------------------------------------------------------------------------------// Login Pages
+	
+	.SingleEntryMethod,
+	.MultipleEntryMethods {
+		width: 470px;
+		h1 {
+			.legend();
+			font-weight: normal;
+			margin-bottom: 15px;
+			}
+		li {
+			margin: 10px 0 0;
+			&:first-child {
+				margin-top: 0;
+				}
+			}
+		.TextBoxWrapper {
+			display: inline;
+			}
+		}
+	
+// Single Entry Login
+// ---------------------------------------------------------------------------------------------------// Single Entry Login
 
+	.SingleEntryMethod {
+
+		#Form_User_SignIn {
+			display: block !important;
+			label[for="Form_Email"],
+			label[for="Form_Password"] {
+				font-size: 13px;
+				display: inline-block;
+				text-align: right;
+				font-weight: normal;
+				width: 130px;
+				margin-top: 0;
+				margin-right: 10px;
+				}
+			ul {
+				overflow: auto;
+				margin-right: 45px;
+				li {
+					float: right;
+					}
+				}
+			.Messages ul {
+				margin-right: 0;
+				li {
+					float: none;
+					}
+				}
+			input {
+				&#Form_Password {
+					width: 210px !important;
+					border-right: none;
+					.border-radius(3px 0 0 3px);
+					}
+				&#Form_Email {
+					width: 280px;
+					max-width: 280px;
+					}
+				&#Form_SignIn {
+					.btn-primary();
+					float: right;
+					width: 70px;
+					margin: 0;
+					}
+				}
+			.ForgotPassword {
+				.btn();
+				.btn-info();
+				margin: 0;
+				width: 70px;
+				.border-radius(0 3px 3px 0);
+				.box-sizing(border-box);
+				}
+			label[for="SignInRememberMe"] {
+				padding: 5px 0;
+				margin: 0;
+				}
+			.Buttons {
+				width: 280px;
+				margin: 15px 0 0;
+				}
+			.CreateAccount {
+				width: 280px;
+				}
+			}
+	
+		#Form_User_Password {
+			clear: both;
+			margin-bottom: -15px;
+			label[for="Form_Email"] {
+				font-size: 13px;
+				margin-top: 0;
+				margin-right: 10px;
+				margin-bottom: 0;
+				display: inline-block;
+				text-align: right;
+				font-weight: normal;
+				width: 130px;
+				}
+			ul {
+				overflow: auto;
+				margin-right: 45px;
+				li {
+					float: right;
+					}
+				}
+			.Messages ul {
+					margin-right: 0;
+					li {
+						float: none;
+						}
+					}
+			input {
+				&.InputBox {
+					width: 280px;
+					max-width: 280px;
+					margin-top: -20px;
+					}
+				&#Form_Requestanewpassword {
+					display: inline-block;
+					float: left;
+					margin: 10px 0;
+					font-size: 12px;
+					width: 160px;
+					border-right: none;
+					.border-radius(3px 0 0 3px);
+					.box-sizing(border-box);
+					}
+				}
+			.Buttons {
+				width: 280px;
+				margin-top: 0;
+				div {
+					display: inline-block;
+					float: right;
+					.box-sizing(border-box);
+					}
+				a {
+					.btn();
+					display: inline-block;
+					font-size: 12px;
+					margin: 10px 0;
+					width: 120px;
+					.border-radius(0 3px 3px 0);
+					.box-sizing(border-box);
+					}
+				}
+			}
+		}
+
+// Multiple Entry Login
+// ---------------------------------------------------------------------------------------------------// Multiple Entry Login
+
+	.MultipleEntryMethods {
+		.MainForm {
+			float: left;
+			margin-bottom: 15px;
+			.box-sizing(border-box);
+			}
+		.Methods {
+			display: block !important;
+			position: relative;
+			float: right;
+			top: 0;
+			padding: 15px 0 15px 15px;
+			margin-top: -15px;
+			border-color: transparent;
+			.box-sizing(border-box);
+			}
+		.Errors {
+			width: 260px;
+			}
+	
+		#Form_User_SignIn {
+			display: block !important;
+			label[for="Form_Email"],
+			label[for="Form_Password"] {
+				font-size: 13px;
+				font-weight: normal;
+				}
+			input {
+				&#Form_Password {
+					width: 210px;
+					border-right: none;
+					.border-radius(3px 0 0 3px);
+					}
+				&#Form_Email {
+					width: 280px;
+					}
+				&#Form_SignIn {
+					.btn-primary();
+					float: right;
+					width: 70px;
+					margin: 0;
+					}
+				}
+			.ForgotPassword {
+				.btn();
+				.btn-info();
+				margin: 0;
+				width: 70px;
+				.border-radius(0 3px 3px 0);
+				.box-sizing(border-box);
+				}
+			label[for="SignInRememberMe"] {
+				width: 210px;
+				padding: 5px 0;
+				margin: 0;
+				}
+			.Buttons {
+				margin: 15px 0 0;
+				}
+			.CreateAccount {
+				width: 280px;
+				}
+			}
+	
+		#Form_User_Password {
+			label[for="Form_Email"] {
+				font-size: 13px;
+				font-weight: normal;
+				margin-top: 15px;
+				}
+			input {
+				&.InputBox {
+					width: 280px;
+					}
+				&#Form_Requestanewpassword {
+					display: inline-block;
+					float: left;
+					font-size: 12px;
+					width: 160px;
+					border-right: none;
+					.border-radius(3px 0 0 3px);
+					.box-sizing(border-box);
+					}
+				}
+			.Buttons {
+				margin-top: 0;
+				div {
+					display: inline-block;
+					float: right;
+					position: relative;
+					}
+				a {
+					.btn();
+					font-size: 12px;
+					margin: 10px 0;
+					width: 120px;
+					.border-radius(0 3px 3px 0);
+					.box-sizing(border-box);
+					}
+				}
+			}
+
+		}
+
+	#FacebookAuth,
+	#GoogleAuth,
+	#OpenIDAuth,
+	#TwitterAuth {
+		float: right;
+		padding: 3px;
+		}
+
+// Apply For Membership
+// ---------------------------------------------------------------------------------------------------// Apply For Membership
+
+	body.Entry.register .container-fluid,
+	body.Entry.register .container {
+		#Content {
+			float: none;
+			.center-block();
+			width: 470px;
+			.Box {
+				border: none;
+				background: none;
+				padding: 0;
+				}
+			h1 {
+				.legend();
+				font-weight: normal;
+				margin-bottom: 15px;
+				}
+			li {
+				margin: 10px 0;
+				&:first-child {
+					margin: 0;
+					}
+				}
+			#Form_User_Register {
+				.TextBoxWrapper {
+					display: inline;
+					}
+				label {
+					display: inline-block;
+					text-align: right;
+					font-size: 13px;
+					font-weight: normal;
+					width: 130px;
+					margin-right: 10px;
+					}
+				label[for="Form_SecurityCheck"],
+				label[for="Form_TermsOfService"],
+				label[for="Form_RememberMe"] {
+					display: block;
+					width: auto;
+					text-align: left;
+					}
+				label.RadioLabel {
+					width: auto;
+					display: inline-block;
+					text-align: left;
+					margin-right: 20px;
+					}
+				label.CheckBoxLabel {
+					clear: both;
+					}
+				input.InputBox {
+					width: 280px;
+					}
+				textarea.TextBox {
+					width: 100%;
+					.box-sizing(border-box);
+					}
+				#recaptcha_table {
+					width: 100%;
+					}
+				#recaptcha_response_field {
+					padding: 4px !important;
+					font-size: 13px;
+					line-height: 18px;
+					color: @gray !important;
+					background-color: @vanillaBodyBackground;
+					border: 1px solid @inputBorder !important;
+					&:focus {
+						border-color: rgba(82, 168, 236, 0.8) !important;
+						}
+					}
+				}
+			.Buttons {
+				.form-actions();
+				.Button {
+					.btn-primary();
+					margin: 0;
+					}
+				}
+			}
+		}
+
+// Reset Password
+// ---------------------------------------------------------------------------------------------------// Reset Password
+
+	body.Entry.passwordrequest,
+	#Popup {
+		#Content, .Content {
+			float: none;
+			.center-block();
+			width: 470px;
+			h1 {
+				.legend();
+				font-weight: normal;
+				margin-bottom: 15px;
+				}
+			#Form_User_Password {
+				label[for="Form_Email"] {
+					font-size: 13px;
+					display: inline-block;
+					text-align: right;
+					font-weight: normal;
+					width: 130px;
+					padding: 0;
+					margin-right: 10px;
+					}
+				ul {
+				overflow: auto;
+				margin-right: 45px;
+					li {
+						float: right;
+						}
+					}
+				.Messages ul {
+					margin-right: 0;
+					li {
+						float: none;
+						}
+					}
+				input {
+					&.InputBox {
+						width: 280px;
+						max-width: 280px;
+						margin-top: -20px;
+						}
+					&#Form_Requestanewpassword {
+						display: inline-block;
+						float: left;
+						margin: 10px 0;
+						font-size: 12px;
+						width: 160px;
+						border-right: none;
+						.border-radius(3px 0 0 3px);
+						.box-sizing(border-box);
+						}
+					}
+				.Buttons {
+					width: 280px;
+					margin-top: 0;
+					div {
+						display: inline-block;
+						float: right;
+						.box-sizing(border-box);
+						}
+					a {
+						.btn();
+						display: inline-block;
+						font-size: 12px;
+						margin: 10px 0;
+						width: 120px;
+						.border-radius(0 3px 3px 0);
+						.box-sizing(border-box);
+						}
+					}
+				}
+			}
+		}
+	
 
 // Data Tables
 // ---------------------------------------------------------------------------------------------------// Data Tables
@@ -510,8 +997,8 @@
 		
 		thead td {
 			vertical-align: middle;
-			border-top: 1px solid @grayLighter;
-			border-bottom: 1px solid @grayLighter;
+			border-top: 1px solid lighten(@tableBorder, 6%);
+			border-bottom: 1px solid lighten(@tableBorder, 6%);
 			padding: 8px 4px;
 			}
 		
@@ -523,7 +1010,7 @@
 		
 		td {
 			vertical-align: middle;
-			border-bottom: 1px solid @grayLighter;
+			border-bottom: 1px solid lighten(@tableBorder, 6%);
 			.Wrap {
 				position: relative;
 				.box-sizing(border-box);
@@ -551,6 +1038,13 @@
 		&.Discussions .Item {	
 			padding: 8px 4px;
 			}
+		
+		&.Comments .Item {
+			padding: 20px 4px;
+			.Message {
+				padding: 10px 0 0 50px;
+				}
+			}
 			
 		}
 
@@ -560,7 +1054,7 @@
 	.Box {
 		
 		h4 {
-			border-bottom: 1px solid @grayLighter;
+			border-bottom: 1px solid  lighten(@tableBorder, 6%);
 			padding-bottom: 5px;
 			margin-bottom: 10px;
 			}
