--- a/design/less/plugins/Signatures.less
+++ b/design/less/plugins/Signatures.less
@@ -5,5 +5,5 @@
 	color: darken(@grayLight, 12%);
 	border-top: 1px solid @whiteSmoke;
 	padding: 4px 0px 1px;
-	margin: 9px 9px 0 0;
+	margin: 15px 9px -16px 0;
 	}
