Added Redactor Editor

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1,9 +1,10 @@
-// Import Bootstrap (Custom Vanilla build), Docs and Prettify
+// Import Bootstrap (Custom Vanilla build), Docs, Prettify and Redactor
 // ---------------------------------------------------------------------------------------------------// Import stylesheets
 
-	@import "bootstrap/bootstrap";				// Bootstrap
-	@import "docs";								// Bootstrap Documentation style
-	@import url("../css/prettify.css");			// Google Code Prettify
+	@import "bootstrap/bootstrap";					// Bootstrap
+	@import "docs";									// Bootstrap Documentation style
+	@import url("../css/prettify.css");				// Google Code Prettify
+	@import url("../redactor/css/redactor.css");	// Redactor Editor
 
 // Bootswatches
 // ---------------------------------------------------------------------------------------------------// Bootswatches
