Revert "Added Redactor Editor"
This reverts commit 9c419411267385c737b69f55ca11f2f49b4e905b.

--- a/design/less/main.less
+++ b/design/less/main.less
@@ -1,10 +1,9 @@
-// Import Bootstrap (Custom Vanilla build), Docs, Prettify and Redactor
+// Import Bootstrap (Custom Vanilla build), Docs and Prettify
 // ---------------------------------------------------------------------------------------------------// Import stylesheets
 
-	@import "bootstrap/bootstrap";					// Bootstrap
-	@import "docs";									// Bootstrap Documentation style
-	@import url("../css/prettify.css");				// Google Code Prettify
-	@import url("../redactor/css/redactor.css");	// Redactor Editor
+	@import "bootstrap/bootstrap";				// Bootstrap
+	@import "docs";								// Bootstrap Documentation style
+	@import url("../css/prettify.css");			// Google Code Prettify
 
 // Bootswatches
 // ---------------------------------------------------------------------------------------------------// Bootswatches
