--- a/design/main.less
+++ b/design/main.less
@@ -51,10 +51,14 @@
 // Buttons, Inputs and Textareas
 // --------------------------------------------------------------------------------------------------- //
 	
-	/*#panel .ButtonGroup { display: block; width: 100%;
-		.btn { width: 88%; .box-sizing(border-box); }
-		.dropdown-toggle { width: 13%; .box-sizing(border-box); }
-	}*/
+	.ButtonGroup {
+		.btn { .box-sizing(border-box); height: 30px; }
+		.btn:first-child { display: block; margin-right: 25px; }
+		.Handle { width: 26px; max-width: 26px; margin-top: -30px; float: right; }
+		&.Big {
+			.Dropdown { .box-sizing(border-box); width: 100%; }
+		}
+	}
 	
 	input, textarea { .box-sizing(border-box); // Fix box sizing model
 		&:focus { background-color: @bodyBackground !important; }
@@ -80,14 +84,22 @@
 	}
 
 
+// Main Container
+// --------------------------------------------------------------------------------------------------- //
+	
+	body > .container { padding-top: 20px; }
+
+
 // Content Pane
 // --------------------------------------------------------------------------------------------------- //
 	
 	#content .BoxFilter { display: none; } // Hide the BoxFilter menu
 	
+	.HomepageTitle { margin-top: 0; }
+	
 	// Discussions
 	// ----------------------------------------------------------------------------------------------- //
-	
+		
 		.ItemDiscussion .Message { font-size: 100%; }
 		
 		
@@ -101,7 +113,7 @@
 
 // Sidebar Pane
 // --------------------------------------------------------------------------------------------------- //
-
+	
 	.MeBox { display: inline-block; margin: 0;
 		.WhoIs, .Username, .MeMenu { display: inline-block; }
 		.Username { padding: 10px 8px 11px; }
@@ -111,4 +123,6 @@
 	.Profile .MeBox { display: inline-block; }
 	.MeBox-SignIn { display: none; }
 	
-	
+	.FilterMenu { margin-top: 20px; margin-right: 0; 
+		i:before { font-weight: bold; }
+	}
