--- a/design/main.less
+++ b/design/main.less
@@ -20,24 +20,6 @@
 // --------------------------------------------------------------------------------------------------- //
 
 	.fontIcon(@icon) { font-family: FontAwesome; font-weight: normal; content: @icon; }
-
-
-/*// Bootstrap Class Mixins
-// --------------------------------------------------------------------------------------------------- //
-	
-	// Buttons
-	// ----------------------------------------------------------------------------------------------- //
-	
-		.Button { .btn(); }
-		
-	// Navigation
-	// ----------------------------------------------------------------------------------------------- //
-		
-		.navbar form { .navbar-search();
-			input { .search-query(); }
-		}
-		
-		.Dropdown { .dropdown-menu(); }*/
 		
 		
 // Basic HTML Elements
@@ -45,20 +27,33 @@
 	
 	body { font-smoothing: always; -webkit-font-smoothing: antialiased; }
 	
+	a {
+		&:hover { text-decoration: none; }
+	}
+	
 	ol, ul { margin: 0; }
+	
+	h1, h2, h3, h4, h5, h6 { font-weight: 300; }
 
 
 // Buttons, Inputs and Textareas
 // --------------------------------------------------------------------------------------------------- //
+	
+	// Grouped Buttons
+	// ----------------------------------------------------------------------------------------------- //
 	
 	.ButtonGroup {
 		.btn { .box-sizing(border-box); height: 30px; }
 		.btn:first-child { display: block; margin-right: 25px; }
 		.Handle { width: 26px; max-width: 26px; margin-top: -30px; float: right; }
 		&.Big {
+			.btn { font-weight: bold; }
 			.Dropdown { .box-sizing(border-box); width: 100%; }
 		}
 	}
+	
+	// Inputs and textareas
+	// ----------------------------------------------------------------------------------------------- //
 	
 	input, textarea { .box-sizing(border-box); // Fix box sizing model
 		&:focus { background-color: @bodyBackground !important; }
@@ -100,19 +95,24 @@
 	// Discussions
 	// ----------------------------------------------------------------------------------------------- //
 		
-		.ItemDiscussion .Message { font-size: 100%; }
-		
+	.Discussion .PageTitle h1 { margin-top: 0; }
+	
+	.ItemDiscussion .Message { font-size: 100%; }
 		
 	// Options Menus
+	// ----------------------------------------------------------------------------------------------- //
 	
-		.OptionsMenu .Flyout { right: -5px; left: auto;
-			&:before, &:after { right: 10px; }
-			&:before { border-bottom: 7px solid #CCC; }
-		}
+	.OptionsMenu .Flyout { right: -5px; left: auto;
+		&:before, &:after { right: 10px; }
+		&:before { border-bottom: 7px solid #CCC; }
+	}
 	
 
 // Sidebar Pane
 // --------------------------------------------------------------------------------------------------- //
+	
+	// Profile Menu
+	// ----------------------------------------------------------------------------------------------- //
 	
 	.MeBox { display: inline-block; margin: 0;
 		.WhoIs, .Username, .MeMenu { display: inline-block; }
@@ -123,6 +123,26 @@
 	.Profile .MeBox { display: inline-block; }
 	.MeBox-SignIn { display: none; }
 	
+	// Filter Menu
+	// ----------------------------------------------------------------------------------------------- //
+	
 	.FilterMenu { margin-top: 20px; margin-right: 0; 
+		.Aside { float: right; }
 		i:before { font-weight: bold; }
+	}
+	
+	// Panel Panes
+	// ----------------------------------------------------------------------------------------------- //
+	
+	.Box h4 { border-bottom: 1px solid rgba(0,0,0,.05); padding-bottom: 5px; margin-bottom: 10px; }
+	
+	.PanelInfo { padding: 0 15px;
+		> li { border-bottom: none; margin: 0 -15px; padding: 3px 15px;
+			&:first-child { border-top: none; }
+			&:hover { background: rgba(0,0,0,0.07); }
+			&.Active { background-color: @linkColor;
+				> a, strong a { color: @white; font-weight: normal;
+				text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2); }
+			}
+		}
 	}
