--- a/design/main.less
+++ b/design/main.less
@@ -34,6 +34,7 @@
 	ol, ul { margin: 0; }
 	
 	h1, h2, h3, h4, h5, h6 { font-weight: 300; }
+	h1.H { margin-top: 0; }
 
 
 // Buttons, Inputs and Textareas
@@ -65,12 +66,6 @@
 	.TextBoxWrapper { padding-right: 0; }
 	
 	
-// Navigation Bar
-// --------------------------------------------------------------------------------------------------- //
-
-	
-
-
 // Subheader Content
 // --------------------------------------------------------------------------------------------------- //
 
@@ -90,14 +85,23 @@
 	
 	#content .BoxFilter { display: none; } // Hide the BoxFilter menu
 	
-	.HomepageTitle { margin-top: 0; }
-	
 	// Discussions
 	// ----------------------------------------------------------------------------------------------- //
-		
+	
 	.Discussion .PageTitle h1 { margin-top: 0; }
 	
-	.ItemDiscussion .Message { font-size: 100%; }
+	.ItemDiscussion .Message { font-size: 100%; padding-left: 50px; }
+	
+	h2.CommentHeading, .MessageForm h2 { font-size: 24px; line-height: 1.2; }
+	
+	.MessageList .Message { padding-left: 50px; }
+	
+	// Leave a Comment
+	// ----------------------------------------------------------------------------------------------- //
+	
+	.CommentForm .FormWrapper { padding: 0 0 0 50px; background: transparent; }
+	
+	.Form-Header .Author .PhotoWrap { margin: 0; }
 		
 	// Options Menus
 	// ----------------------------------------------------------------------------------------------- //
