Changed CSS compression type

--- a/design/main.less
+++ b/design/main.less
@@ -100,11 +100,11 @@
 	
 	.Discussion .PageTitle h1 { margin-top: 0; }
 	
-	.ItemDiscussion .Message { font-size: 100%; padding-left: 50px; }
+	.ItemDiscussion .Message { font-size: 100%; padding-top: 5px; }
 	
 	h2.CommentHeading, .MessageForm h2 { font-size: 24px; line-height: 1.2; }
 	
-	.MessageList .Message { padding-left: 50px !important; }
+	.MessageList .Message { padding-top: 5px !important; }
 	
 	// Data Tables
 	// ----------------------------------------------------------------------------------------------- //
@@ -137,6 +137,8 @@
 	.CommentForm .FormWrapper { padding: 0 0 0 50px; background: transparent; }
 	
 	.Form-Header .Author .PhotoWrap { margin: 0; }
+	
+	.MarkupHelp { color: rgba(0,0,0,.5); margin-right: 15px; line-height: 2.2; }
 		
 	// Options Menus
 	// ----------------------------------------------------------------------------------------------- //
