Updated to latest Bootstrap codebase

--- a/design/bootstrap/responsive.less
+++ b/design/bootstrap/responsive.less
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap Responsive v2.1.0-wip
+ * Bootstrap Responsive v2.0.4
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -12,6 +12,14 @@
 // Responsive.less
 // For phone and tablet devices
 // -------------------------------------------------------------
+
+
+// REPEAT VARIABLES & MIXINS
+// -------------------------
+// Required since we compile the responsive stuff separately
+
+@import "variables.less"; // Modify this for custom colors, font-sizes, etc
+@import "mixins.less";
 
 
 // RESPONSIVE CLASSES
