--- a/design/main.less
+++ b/design/main.less
@@ -8,12 +8,12 @@
 // Bootswatches
 // --------------------------------------------------------------------------------------------------- //
 
-// Change "Vanilla" in the url to a swatch of your liking. The included swatches can be found in the
+// Change "{SWATCH}" in the url to a swatch of your liking. The included swatches can be found in the
 // swatches direcotry. Swatches included: Cerulean, Journal, Simplex, Slate, Spacelab and United.
 // NB: This version of VanillaBootstrap doesn't yet fully support Bootswatches!
 	
-	//@import "swatches/Vanilla/variables";
-	//@import "swatches/Vanilla/bootswatch";
+	//@import "swatches/{SWATCH}/variables";
+	//@import "swatches/{SWATCH}/bootswatch";
 	
 
 // Extra Mixins
