--- a/design/bootstrap/docs.less
+++ b/design/bootstrap/docs.less
@@ -29,6 +29,9 @@ h3 code {
 
 body > .navbar-fixed-top {
   font-size: 13px;
+  -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.15);
+     -moz-box-shadow: 0 5px 15px rgba(0,0,0,.15);
+          box-shadow: 0 5px 15px rgba(0,0,0,.15);
 }
 
 /* Change the docs' brand */
@@ -167,7 +170,7 @@ hr.soften {
   right: 0;
   bottom: 0;
   left: 0;
-  background: url(images/masthead-pattern.png) repeat center center;
+  background: url(../design/images/masthead-pattern.png) repeat center center;
   opacity: .4;
 }
 
@@ -407,6 +410,8 @@ hr.soften {
 /* Custom, larger checkbox labels */
 .download .checkbox {
   padding: 6px 10px 6px 25px;
+  font-size: 13px;
+  line-height: 18px;
   color: #555;
   background-color: #f9f9f9;
   -webkit-border-radius: 3px;
@@ -886,11 +891,13 @@ form.bs-docs-example {
   min-height: 1px;
 }
 .bs-docs-sidenav {
-  margin-top: 40px;
+  width: 218px;
+  margin-top: 30px;
   padding: 0;
   margin-right: 10px;
   background-color: #fff;
   border: 1px solid #e5e5e5;
+  margin-left: 0;
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
           border-radius: 6px;
@@ -929,12 +936,67 @@ form.bs-docs-example {
   background-image: url(../img/glyphicons-halflings-white.png);
   opacity: .75;
 }
+.bs-docs-sidenav.affix {
+  top: 40px;
+}
+
+@media (min-width: 1200px) {
+  .bs-docs-sidenav {
+    width: 258px;
+  }
+}
 
 @media (max-width: 979px) {
-
   .bs-docs-sidenav {
+    top: 0px;
     margin-top: 30px;
     margin-right: 0;
   }
+}
 
+@media (min-width: 768px) and (max-width: 979px) {
+  .bs-docs-sidenav {
+    width: 166px;
+  }
+}
+
+@media (max-width: 767px) {
+  .bs-docs-sidenav {
+    width: auto;
+  }
+  .bs-docs-sidenav.affix {
+    position: relative;
+    width: auto;
+  }
+}
+
+@media (min-width: 979px) {
+  .masthead,
+  .subhead {
+    position: fixed;
+    top: 40px;
+    right: 0;
+    left: 0;
+  }
+  .masthead {
+    height: 380px;
+  }
+  .subhead {
+    height: 130px; /* +80px pdding */
+  }
+  .bs-docs-canvas {
+    position: absolute;
+    width: 100%;
+    z-index: 10;
+    background-color: #fff;
+    -webkit-box-shadow: 0 -5px 15px rgba(0,0,0,.15);
+       -moz-box-shadow: 0 -5px 15px rgba(0,0,0,.15);
+            box-shadow: 0 -5px 15px rgba(0,0,0,.15);
+  }
+  .masthead + .bs-docs-canvas {
+    top: 530px;
+  }
+  .subhead + .bs-docs-canvas {
+    top: 250px;
+  }
 }
