Fix a couple of bug

--- a/design/main.less
+++ b/design/main.less
@@ -87,7 +87,7 @@
 // Main Container
 // --------------------------------------------------------------------------------------------------- //
 	
-	body > .container { padding-top: 20px; }
+	body > .bs-docs-canvas > .container { padding-top: 20px; }
 
 
 // Content Pane
@@ -226,3 +226,8 @@
 		.close { font-size: 22px; }
 		p { padding: 0; }
 	}
+
+// Alerts
+// --------------------------------------------------------------------------------------------------- //
+
+	.Messages.Errors ul { .alert(); }
