--- a/design/custom.css
+++ b/design/custom.css
@@ -1052,4 +1052,4 @@ h2.CommentHeading,.MessageForm h2{font-size:24px;line-height:1.2;}
 #Popup a.Close{top:12px;right:15px;}
 #Popup .close{font-size:22px;}
 #Popup p{padding:0;}
-.Messages.Errors ul{padding:8px 35px 8px 14px;margin-bottom:20px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;color:#c09853;}
+#bootstrap-container .Errors ul,#Popup .Errors ul{padding:8px 35px 8px 14px;margin-bottom:20px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5) !important;background-color:#f2dede !important;border:1px solid #eed3d7 !important;-webkit-border-radius:4px !important;-moz-border-radius:4px !important;border-radius:4px !important;color:#b94a48 !important;}#bootstrap-container .Errors ul li,#Popup .Errors ul li{background-color:transparent !important;color:#b94a48 !important;}
